syntax = "proto3";

option go_package = "github.com/wafi04/golang-backend/grpc/pb";

package pb;

message Stock {
    string variant_id = 1;
    int64 quantity = 2;
    int64 created_at = 3;
    int64 updated_at = 4;
}

message ChangeStockRequest {
    string variant_id = 1;
    int64 quantity = 2;
}

message GetStockRequest {
    string variant_id = 1;
}

message BatchGetStockRequest {
    repeated string variant_ids = 1;
}

message BatchGetStockResponse {
    repeated Stock stocks = 1;
}

message CheckStockAvailabilityRequest {
    string variant_id = 1;
    int64 requested_quantity = 2;
}

message CheckStockAvailabilityResponse {
    bool is_available = 1;
    int64 available_quantity = 2;
}

service StockService {
    // Mengubah jumlah stok
    rpc ChangeStock(ChangeStockRequest) returns (Stock);

    // Mendapatkan info stok single item
    rpc GetStock(GetStockRequest) returns (Stock);

    // Mendapatkan info stok multiple items
    rpc BatchGetStock(BatchGetStockRequest) returns (BatchGetStockResponse);

    // Mengecek ketersediaan stok
    rpc CheckStockAvailability(CheckStockAvailabilityRequest) returns (CheckStockAvailabilityResponse);
}